# ROTS2

./: Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
shared/: Cargo.toml
