[package] #
name = "shared"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.15.0"
default-features = false
features = ["serialize"]

[dependencies]
#message-io = "0.18.2"
serde_yaml = "0.9.34"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
once_cell = "1.20.2"
rand = "0.8.5"

# Everything that server has, we also have
bevy_ecs = "0.15.0"
bevy_app = "0.15.0"
bevy_log = "0.15.0"
bevy_core = "0.15.0"
bevy_time = "0.15.0"
bevy_transform = "0.15.0"
bevy_hierarchy = "0.15.0"
bevy_diagnostic = "0.15.0"
phf = { version = "0.11.2", features = ["macros"] }
#postcard = { version = "1.1.1", features = ["use-std", "alloc"] }
clap = { version = "4.5.23" }

[dev-dependencies]
tungstenite = "0.26.1"

[build-dependencies]
quote = "1.0.37"
prettyplease = "0.2.25"
regex = "1.11.1"
syn = "2.0.90"
